--- a/weekly_mission_3/my_first_js_project/package.json
+++ b/weekly_mission_3/my_first_js_project/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Semana 3 LaunchX my first JS project",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+  "scripts": {    
+    "test": "node ./node_modules/jest/bin/jest",
+    "test_exp": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "start": "node index.js"
   },
   "author": "RaulSalomonIgl",
